# serenity-corp

./: .gitignore  .gitmodules  README.md  code-style.epf
batle-sim/src/: BattleField.cpp  BattleField.h  CMakeLists.txt  MenuWidget.cpp  MenuWidget.h  OutputConsole.cpp  OutputConsole.h  batle-sim.h  main.cpp
common-lib/common/: main-window.cpp  window-widget.cpp  window-widget.h
common-lib/nuklear_cross/: nuklear.h
common-lib/nuklear_cross/nkc_frontend/: nkc_gdip.h
common-lib/nuklear_cross/nuklear_drivers/: nuklear_gdip.h
enginer-dep/src/: CMakeLists.txt  Ship.cpp  Ship.h  Unit.cpp  Unit.h  enginer-dep.h  keyboard-capture.cpp  keyboard-capture.h  main-window.cpp  main-window.h  main.cpp  window-widget.cpp  window-widget.h
medical-dep/src/: CMakeLists.txt  CMakeLists.txt.1  NoteWidget.cpp  NoteWidget.h  deploy.sh  gdb.exe.stackdump  main.cpp  medical department notes.txt  medical department.txt  medical-dep.exe.stackdump  medical-dep.h
